src/objects/netsuite_conn__Quote_Sync_Settings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>netsuite_conn__Account_Field_Ids__c</fullName>
        <description>This will store the list of account fields on Quote which should sync with Quote</description>
        <label>Account Field Ids</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Account_Id__c</fullName>
        <label>Account Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Disable_Line_Item_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Line Item Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Disable_Trigger__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Disable Trigger</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Do_Not_Allow_Discount_Override__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, user will not be able to override the Quote Line Item Discount %. It will always be sourced from the NetSuite Discount Item.</description>
        <label>Do Not Allow Discount% Override</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>netsuite_conn__Use_Batch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Use Batch</label>
        <type>Checkbox</type>
    </fields>
    <label>Quote Sync Settings</label>
</CustomObject>